add style with bootstrap

--- a/staticpages/templates/about.html
+++ b/staticpages/templates/about.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>ABOUT</title>
-</head>
-<body>
-	<h1>ABOUT</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block contenido %}
+	<h1>
+		About Us
+	</h1>
+	<p>
+		The 
+		<a href="https://docs.djangoproject.com/"> Django Tutorial</a>
+		is a project to make a book and screencasts to teach web development
+		with <strong> Django </strong>
+		</a>. 
+		This is the sample application for the tutorial.
+	</p>
+{% endblock %}
