--- a/staticpages/templates/help.html
+++ b/staticpages/templates/help.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>HELP</title>
-</head>
-<body>
-	<h1>HELP</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block contenido %}
+	<h1>Help</h1>
+	<p>
+		Get help on the Django Tutorial at the
+		<a href="https://docs.djangoproject.com/">Django Tutorials</a>.
+	</p>
+{% endblock %}
