--- a/staticpages/templates/index.html
+++ b/staticpages/templates/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>INDEX</title>
-</head>
-<body>
-	<h1>INDEX</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block contenido %}
+	<div class="center hero-unit">
+		<h1>Welcome to the Sample App</h1>
+		<h2>
+			This is the home page for the
+			<a href="https://docs.djangoproject.com/en/1.7/intro/tutorial01/">Django Tutorial</a>
+		</h2>
+		<a class="btn btn-large btn-primary" href="#"> Sign up now!</a>
+	</div>
+	<a href="https://docs.djangoproject.com/"><img alt="Django" src="/static/django.png" /></a>
+{% endblock %}
